--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 													<div class="sc_testimonial_avatar">
 														<img alt="" src="images\profile_pic.png"></div>
 													<div class="sc_testimonial_content">
-														<p>My kids started studying in 2014. I am very much satisfied with their result and the teacher's method of teaching. And would recommend </p>
+														<p>My kids started studying in 2014. I am very much satisfied with their result and the teacher's method of teaching. And would recommend others. </p>
 													</div>
 													<div class="sc_testimonial_author">
 														<a href="#">Zahra Bint Riaz</a>
@@ -525,20 +525,19 @@
 													<div class="sc_testimonial_avatar">
 														<img alt="" src="images\profile_pic_2.png"></div>
 													<div class="sc_testimonial_content">
-														<p>I enrolled my three kids at "E-Learning Holy Quran" in 2012. My eldest daughter has studied the Holy Quran entirely with Tajweed rules and has learned (memorized) Namaz (Salaah), six Kalimat, a few supplications, short chapters from 30th.
-														</p>
+														<p>I enrolled my three kids at "E-Learning Holy Quran" in 2012. My eldest daughter has studied the Holy Quran entirely with Tajweed rules and has learned (memorized) Namaz (Salaah), six Kalimat, a few supplications, short chapters from 30th. </p>
 													</div>
 													<div class="sc_testimonial_author">
 														<a href="#">Zafar Iqbal</a>
 													</div>
 												</div>
+											</div>
+											<div class="swiper-slide height_12em width_100per" data-style="width:100%;height:12em;">
 												<div class="sc_testimonial_item">
 													<div class="sc_testimonial_avatar">
 														<img alt="" src="images\profile_pic_2.png"></div>
 													<div class="sc_testimonial_content">
-														<p>I have been a client of Elearning HolyQuran for past few months.I must appreciate their hard work and diligence.In my few months experience, i have seen many good things in this company;their team is passionate and dedicated to provide …
-
-														</p>
+														<p>I have been a client of Elearning HolyQuran for past few months.I must appreciate their hard work and diligence.In my few months experience, i have seen many good things in this company;their team is passionate and dedicated to provide.</p>
 													</div>
 													<div class="sc_testimonial_author">
 														<a href="#">Hasib Nazir</a>
@@ -563,27 +562,26 @@
 											<div class="columns_wrap sc_columns columns_nofluid sc_columns_count_3">
 												<div class="column-1_3 sc_column_item sc_column_item_1 odd first text_center">
 													<div class="sc_price_block sc_price_block_style_1 width_100per">
-														<div class="sc_price_block_title">Trial</div>
+														<div class="sc_price_block_title">Free Trial</div>
 														<div class="sc_price_block_money">
 															<div class="sc_price_block_icon icon-clock-2"></div>
 														</div>
 														<div class="sc_price_block_description">
-															<span class="sc_highlight font_2_57em lh_1em"><b>Free!</b> 3 Days</span>
+															<span class="sc_highlight font_2_57em lh_1em">3 Days</span>
 														</div>
 														<div class="sc_price_block_link">
-															<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
+															<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">SCHEDULE A TRIAL</a>
 														</div>
 													</div>
 												</div>
 												<div class="column-1_3 sc_column_item sc_column_item_2 even text_center">
 													<div class="sc_price_block sc_price_block_style_2">
-														<div class="sc_price_block_title">Monthly</div>
+														<div class="sc_price_block_title">3 Days / Week</div>
 														<div class="sc_price_block_money">
-															<div class="sc_price"><span class="sc_price_currency">$</span><span class="sc_price_money">89</span></div>
+															<div class="sc_price"><span class="sc_price_currency">$</span><span class="sc_price_money">60</span></div>
 														</div>
 														<div class="sc_price_block_description">
-															<p><b>Save $98</b> every year compared to the monthly
-																<br /> plan by paying yearly.</p>
+															<p>Duration of each class will be 30 minutes.</b> Multiple courses may be opted at a time,</br> in same fee.</p>
 														</div>
 														<div class="sc_price_block_link">
 															<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
@@ -592,16 +590,15 @@
 												</div>
 												<div class="column-1_3 sc_column_item sc_column_item_3 odd text_center">
 													<div class="sc_price_block sc_price_block_style_3">
-														<div class="sc_price_block_title">Yearly</div>
+														<div class="sc_price_block_title">6 Days / Week</div>
 														<div class="sc_price_block_money">
 															<div class="sc_price">
 																<span class="sc_price_currency">$</span>
-																<span class="sc_price_money">129</span>
+																<span class="sc_price_money">120</span>
 															</div>
 														</div>
 														<div class="sc_price_block_description">
-															<p><b>Save $120</b> every year compared to the monthly
-																<br /> plan by paying biannually.</p>
+															<p>Duration of each class will be 30 minutes.</b> Multiple courses may be opted at a time,</br> in same fee.</p>
 														</div>
 														<div class="sc_price_block_link">
 															<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
@@ -609,13 +606,18 @@
 													</div>
 												</div>
 											</div>
+											<div style="padding-top: 20px;">
+												<span style="font-weight: bold;">Note:</span> Above Pricing is in US Dollars. The fee will be equivalent amount in local currency based on exchange rate. Please use 
+												<a href="https://www.xe.com/currencyconverter/" target="_blank">Currency Converter</a>
+												to calculate the fee in local currency.
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<!-- /Pricing section -->
                         </section>
-                    </article>
+                    </article> 
                 </div>
             </div>
             <!-- /Content without sidebar -->
@@ -779,7 +781,7 @@
 					
                     <div class="contacts_address">
                         <a class="address_left" href="tel:+92 345 480 9757"><span style="font-weight: bold;">Phone:&nbsp;</span> 0092 345 480 9757 </a>
-                        <a class="address_right" href="mailto:elearningholyquran@gmail.com"><span style="font-weight: bold;">Email:&nbsp;</span> elearningholyquran@gmail.com</a>
+                        <a class="address_right" href="mailto:info@elearningholyquran.com"><span style="font-weight: bold;">Email:&nbsp;</span> info@elearningholyquran.com</a>
                     </div>
 					
 					<br><br><br>
