--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<li class="menu-item menu-item-has-children"><a href="#about-us">About Us</a>
 									<ul class="sub-menu">
 										<li class="menu-item"><a href="#about-us">Why Choose Us</a></li>
-										<li class="menu-item"><a href="#what-clients-say">What clients say</a></li>
+										<li class="menu-item"><a href="#what-clients-say">What Clients say</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-has-children"><a href="#courses">Courses</a></li>
