--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
 																			</p>
 																			<div class="post_buttons">
 																				<div class="post_button">
-																					<a href="#faqs" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">LEARN MORE</a>
+																					<a href="images\Noorani-Qaida.png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
+																						LEARN MORE
+																					</a>
 																				</div>
 																				<div class="post_button">
 																					<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
