--- a/index.html
+++ b/index.html
@@ -705,6 +705,53 @@
 											</ul>
 										</div>
 									</div>
+									<div class="sc_accordion_item odd first">
+										<h5 class="sc_accordion_title">
+											<span class="sc_accordion_icon sc_accordion_icon_closed icon-plus-2"></span>
+											<span class="sc_accordion_icon sc_accordion_icon_opened icon-minus-2"></span>
+											How to pay the Fee/Dues?
+										</h5>
+										<div class="sc_accordion_content">
+											<ol>
+												<li><span style="font-weight: bold;">Online Payment Methods</span>
+													<p>You can pay through your Credit Cards or from your 2checkout.com account. After submiting the registration form, Online Payment
+														Buttons will be available to make Payment or Donation.</p>
+												</li>
+												<li><span style="font-weight: bold;">Offline Payment Methods</span>
+													<p>
+														You can transfer the fee from bank to bank through Wire Transfer:</br>
+														Title of Account: Abdul Razaq</br>
+														Account Number: 0469007900139525</br>
+														Branch Code: 0469</br>
+														Bank Routing Number (Swift Code): FAYSPKKA469</br>
+														IBAN: PK63FAYS0469007900139525</br>
+														Bank: Faysal Bank Limited, Pakistan</br>
+													</p>
+													<!-- <p>
+														You can transfer the fee from bank to bank through Wire Transfer:</br>
+														<span style="font-weight: bold;">Title of Account:</span> <span style="font-style: italic;">Abdul Razaq</span></br>
+														<span style="font-weight: bold;">Account Number:</span><span style="font-style: italic;"> 0469007900139525</span></br>
+														<span style="font-weight: bold;">Branch Code:</span> <span style="font-style: italic;">0469</span></br>
+														<span style="font-weight: bold;">Bank Routing Number (Swift Code):</span> <span style="font-style: italic;">FAYSPKKA469</span></br>
+														<span style="font-weight: bold;">IBAN:</span> <span style="font-style: italic;">PK63FAYS0469007900139525</span></br>
+														<span style="font-weight: bold;">Bank:</span> <span style="font-style: italic;">Faysal Bank Limited, Pakistan</span></br>
+													</p> -->
+												</li>
+												<li><span style="font-weight: bold;">Send Money Online | Western Union</span>
+													<p>
+														You may send money from your computer while sitting at your home/office to receiver's bank account directly. For further details please
+														visit the links given below.</br>
+														For example from Australia:</br>
+														<ul>
+															<li><a href="https://www.westernunion.com/au/en/direct-to-bank-details.html" target="_blank">Western Union - Direct Bank to Bank Transfer</a></br></li>
+															<li><a href="https://www.westernunion.com/au/en/send-money-online.html" target="_blank">Western Union - Send Money Online</a></br></li>
+															<li><a href="https://www.westernunion.com/au/en/faq-send-money-to-bank-account.html" target="_blank">Western Union - Send Money to Bank Account</a></br></li>
+														</ul>
+													</p>
+												</li>
+											</ol>
+										</div>
+									</div>
 								</div>
 								</div>
 							</div>
