--- a/index.html
+++ b/index.html
@@ -743,6 +743,7 @@
 														visit the links given below.</br>
 														For example from Australia:</br>
 														<ul>
+															<li><a href="https://www.westernunion.com/au/en/send-money-to-pakistan.html" target="_blank">Western Union - Send Money to Pakistan</a></br></li>
 															<li><a href="https://www.westernunion.com/au/en/faq-send-money-to-bank-account.html" target="_blank">Western Union - Send Money to Bank Account</a></br></li>
 															<li><a href="https://www.westernunion.com/au/en/direct-to-bank-details.html" target="_blank">Western Union - Direct Bank to Bank Transfer</a></br></li>
 															<li><a href="https://www.westernunion.com/au/en/send-money-online.html" target="_blank">Western Union - Send Money Online</a></br></li>
