--- a/index.html
+++ b/index.html
@@ -207,12 +207,7 @@
 																		<a href="#contact-us">Learn to Read Noorani Qaida</a>
 																	</h4>
 																	<div class="post_descr">
-																		<div class="post_price">
-																			<span class="post_price_value">$85</span>
-																			<span class="post_price_period">monthly</span>
-																		</div>
-																		
-																		<div class="post_category">
+																		<div style="text-align: center; padding-top: 20px;" class="post_category">
 																			<a href="#contact-us">Beginner Level</a>
 																		</div>
 																	</div>
@@ -255,10 +250,7 @@
 																		<a href="#contact-us">Learn to Read Holy Quran</a>
 																	</h4>
 																	<div class="post_descr">
-																		<div class="post_price">
-																			<span class="post_price_value">$195</span><span class="post_price_period">monthly</span>
-																		</div>
-																		<div class="post_category">
+																		<div style="text-align: center; padding-top: 20px;" class="post_category">
 																			<a href="#contact-us">Beginner Level</a>
 																		</div>
 																	</div>
@@ -299,10 +291,7 @@
 																		<a href="#">Memorization of the Holy Quran</a>
 																	</h4>
 																	<div class="post_descr">
-																		<div class="post_price">
-																			<span class="post_price_value">$195</span><span class="post_price_period">monthly</span>
-																		</div>
-																		<div class="post_category">
+																		<div style="text-align: center; padding-top: 20px;" class="post_category">
 																			<a href="#contact-us">Intermediate Level</a>
 																		</div>
 																	</div>
@@ -343,11 +332,7 @@
 																		<a href="#">Tajweed-o-Qirat Course</a>
 																	</h4>
 																	<div class="post_descr">
-																		<div class="post_price">
-																			<span class="post_price_value">$120</span>
-																			<span class="post_price_period">monthly</span>
-																		</div>
-																		<div class="post_category">
+																		<div style="text-align: center; padding-top: 20px;" class="post_category">
 																			<a href="#contact-us">Beginner Level</a>
 																		</div>
 																	</div>
@@ -387,11 +372,7 @@
 																		<a href="#contact-us">Tafseer-e-Quran Course</a>
 																	</h4>
 																	<div class="post_descr">
-																		<div class="post_price">
-																			<span class="post_price_value">$120</span>
-																			<span class="post_price_period">monthly</span>
-																		</div>
-																		<div class="post_category">
+																		<div style="text-align: center; padding-top: 20px;" class="post_category">
 																			<a href="#contact-us">Beginner Level</a>
 																		</div>
 																	</div>
@@ -430,11 +411,7 @@
 																		<a href="#contact-us">Namaz and Dua</a>
 																	</h4>
 																	<div class="post_descr">
-																		<div class="post_price">
-																			<span class="post_price_value">$120</span>
-																			<span class="post_price_period">monthly</span>
-																		</div>
-																		<div class="post_category">
+																		<div style="text-align: center; padding-top: 20px;" class="post_category">
 																			<a href="#contact-us">Beginner Level</a>
 																		</div>
 																	</div>
