--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                     </div>
 					
                     <div class="contacts_address">
-                        <a class="address_left" href="https://api.whatsapp.com/send?phone=+923454809757"><span style="font-weight: bold;">WhatsApp:&nbsp;</span> 0092 345 480 9757 </a>
+                        <a class="address_left" href="https://api.whatsapp.com/send?phone=+923454809757" target="_blank"><span style="font-weight: bold;">WhatsApp:&nbsp;</span> 0092 345 480 9757 </a>
                         <a class="address_right" href="mailto:info@elearningholyquran.com"><span style="font-weight: bold;">Email:&nbsp;</span> info@elearningholyquran.com</a>
                     </div>
 					
