--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 																			</p>
 																			<div class="post_buttons">
 																				<div class="post_button">
-																					<a href="images\Memorization of holy quran-Popup.png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
+																					<a href="images\Learn to Read Noorani Qaida.png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
 																						LEARN MORE
 																					</a>
 																				</div>
@@ -266,7 +266,9 @@
 																			</p>
 																			<div class="post_buttons">
 																				<div class="post_button">
-																					<a href="#faqs" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">LEARN MORE</a>
+																					<a href="images\Learn to Read Holy Quran (With Tajweed).png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
+																						LEARN MORE
+																					</a>
 																				</div>
 																				<div class="post_button">
 																					<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
@@ -350,7 +352,9 @@
 																			</p>
 																			<div class="post_buttons">
 																				<div class="post_button">
-																					<a href="#faqs" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">LEARN MORE</a>
+																					<a href="images\Tajweed-o-Qirat Course.png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
+																						LEARN MORE
+																					</a>
 																				</div>
 																				<div class="post_button">
 																					<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
@@ -375,7 +379,7 @@
 																	</h4>
 																	<div class="post_descr">
 																		<div style="text-align: center; padding-top: 20px;" class="post_category">
-																			<a href="#contact-us">Beginner Level</a>
+																			<a href="#contact-us">Advance Level</a>
 																		</div>
 																	</div>
 																</div>
@@ -388,7 +392,9 @@
 																			<p><a href="#contact-us">This course will help you in translation, interpretation and contextual understanding of Holy Quran in detail.</a></p>
 																			<div class="post_buttons">
 																				<div class="post_button">
-																					<a href="#faqs" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">LEARN MORE</a>
+																					<a href="images\Tafseer-e-Quran-Popup.png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
+																						LEARN MORE
+																					</a>
 																				</div>
 																				<div class="post_button">
 																					<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
@@ -427,7 +433,9 @@
 																			<p><a href="#contact-us">in this short basic course you will be taught Prayer, Masnoorn Duas, and 6 Kalimas.</a></p>
 																			<div class="post_buttons">
 																				<div class="post_button">
-																					<a href="#faqs" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">LEARN MORE</a>
+																					<a href="images\Namaz and Dua.png" class="woocommerce-main-image zoom sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small">
+																						LEARN MORE
+																					</a>
 																				</div>
 																				<div class="post_button">
 																					<a href="#contact-us" class="sc_button sc_button_square sc_button_style_filled sc_button_bg_link sc_button_size_small"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/elearningholyquran/15min'});return false;">REGISTER NOW</a>
