Light orangish HERO

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
         <div class="contact-info">
             <p class="contact-label">📍 Office</p>
             <p class="contact-detail">AL QUROON PUBLISHERS</p>
-            <p class="contact-detail">123 Publishing Avenue, Lahore, Pakistan</p>
+            <p class="contact-detail">82-A Patiala House, Race Course Road, GOR-I, Lahore, Pakistan</p>
 
             <hr class="separator">
 
             <p class="contact-label">📧 Email</p>
-            <p class="contact-detail">info@alquroonpublishers.com</p>
+            <p class="contact-detail">alquroonpublishers@gmail.com</p>
 
             <hr class="separator">
 
