--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AL QUROON PUBLISHERS</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script defer src="script.js"></script>
 </head>
 <body>
@@ -119,30 +120,18 @@
 <!-- Contact Section -->
 <section id="contact">
     <h2 class="section-title">Contact Us</h2>
-    <div class="contact-container">
-        <div class="contact-info">
-            <p class="contact-label">📍 Office</p>
-            <p class="contact-detail">AL QUROON PUBLISHERS</p>
-            <p class="contact-detail">82-A Patiala House, Race Course Road, GOR-I, Lahore, Pakistan</p>
-
-            <hr class="separator">
-
-            <p class="contact-label">📧 Email</p>
-            <p class="contact-detail">alquroonpublishers@gmail.com</p>
-
-            <hr class="separator">
-
-            <p class="contact-label">💬 WhatsApp</p>
-            <a href="https://wa.me/923123456789" target="_blank" class="whatsapp-link">
-                <span class="whatsapp-icon"></span> +92 312 3456789
-            </a>
-        </div>
-    </div>
+    
+    <p class="contact-detail">
+        <p>📍 82-A Patiala House, Race Course Road, GOR-I, Lahore, Pakistan </p>
+        <span style="display: flex; justify-content: center;"> <a href="mailto:alquroonpublishers@gmail.com" class="email-link">alquroonpublishers@gmail.com</a></span>
+        <p><a href="https://wa.me/923330508717" target="_blank" class="whatsapp-link">+92 333 0508717</a></p>
+    </p>
 </section>
+
 <!-- Footer Section -->
-<footer id="footer">
+<!-- <footer id="footer">
 	<p class="footer-copy">&copy; 2025 AL QUROON PUBLISHERS. All Rights Reserved.</p>
-</footer>
+</footer> -->
 
 </body>
 </html>
