Add Unlimited Carousal for the two books

--- a/index.html
+++ b/index.html
@@ -92,30 +92,11 @@
 
     <div class="carousel-container">
         <div class="carousel-track">
-            <!-- Placeholder books (Dynamic content will be handled via JS) -->
-            <div class="work-item">
-                <img src="https://via.placeholder.com/150x220" alt="Book Cover">
-                <h3>The Eternal Saga</h3>
-                <p>A thrilling fantasy novel that takes readers on an unforgettable journey.</p>
-            </div>
-            <div class="work-item">
-                <img src="https://via.placeholder.com/150x220" alt="Book Cover">
-                <h3>Echoes of Time</h3>
-                <p>An inspiring memoir reflecting on life's past, present, and future.</p>
-            </div>
-            <div class="work-item">
-                <img src="https://via.placeholder.com/150x220" alt="Book Cover">
-                <h3>The Art of Words</h3>
-                <p>A comprehensive guide for aspiring writers and storytellers.</p>
-            </div>
-            <div class="work-item">
-                <img src="https://via.placeholder.com/150x220" alt="Book Cover">
-                <h3>Hidden Truths</h3>
-                <p>A gripping mystery novel that keeps readers on the edge of their seats.</p>
-            </div>
+            <!-- Dynamic content will be added here via JavaScript -->
         </div>
     </div>
 </section>
+
 
 <!-- Contact Section -->
 <section id="contact">
