Add Books in short contianer

--- a/index.html
+++ b/index.html
@@ -87,12 +87,20 @@
 
 <!-- Our Published Works Section -->
 <section id="works">
-    <h2 class="section-title">Our Published Works</h2>
-    <p class="section-description">Explore some of the exceptional books we have published, each crafted with passion and dedication.</p>
+    <div class="container">
+        <h2 class="section-title">Our Published Works</h2>
+        <p class="section-description">
+            Explore some of the exceptional books we have published, each crafted with passion and dedication.
+        </p>
 
-    <div class="carousel-container">
-        <div class="carousel-track">
-            <!-- Dynamic content will be added here via JavaScript -->
+        <div class="carousel-container">
+            <!-- <button class="carousel-btn prev-btn">&#10094;</button> -->
+            <div class="carousel-track-wrapper">
+                <div class="carousel-track">
+                    <!-- Dynamic content will be added via JavaScript -->
+                </div>
+            </div>
+            <!-- <button class="carousel-btn next-btn">&#10095;</button> -->
         </div>
     </div>
 </section>
