Add Official Number to the footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
     <p class="contact-detail">
         <p>📍 82-A Patiala House, Race Course Road, GOR-I, Lahore, Pakistan </p>
         <span style="display: flex; justify-content: center;"> <a href="mailto:alquroonpublishers@gmail.com" class="email-link">alquroonpublishers@gmail.com</a></span>
-        <p><a href="https://wa.me/923454809757" target="_blank" class="whatsapp-link">+92 345 4809757</a></p>
+        <p>
+            <a href="https://wa.me/923454809757" target="_blank" class="whatsapp-link">+92 345 4809757</a>
+            |
+            <a href="https://wa.me/923330508717" target="_blank" class="whatsapp-link">+92 333 0508717</a>
+        </p>
     </p>
 </section>
 
